--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NPM_TOKEN=<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>
-GH_TOKEN=<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>
+NPM_TOKEN=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
+GH_TOKEN=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
